Rice Omarchy: Waybar enhancements, window styling, and terminal readability
- Waybar: transparency, blur, floating, rounded corners, increased size
- Added performance trackers (CPU, RAM, GPU) with dynamic colors
- Integrated Cava audio visualizer with interactive controls
- Window styling: rounded corners, reduced gaps, increased transparency
- Terminal fonts: increased to 14pt for better 1440p readability
- Multi-system support: monitors.conf template and local-only handling
- Custom walker theme and mako config with rounded corners (Omarchy-compliant)
- Enhanced sync scripts to preserve local-only configs

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -13,7 +13,13 @@ source = ~/.local/share/omarchy/default/hypr/windows.conf
 source = ~/.config/omarchy/current/theme/hyprland.conf
 
 # Change your own setup in these files (and overwrite any settings from defaults!)
+# NOTE: monitors.conf is LOCAL ONLY (not in git, created per-machine)
 source = ~/.config/hypr/monitors.conf
+
+# Fallback: safe default if monitors.conf is missing or empty
+# This will be overridden by monitors.conf settings above
+monitor=,preferred,auto,1
+
 source = ~/.config/hypr/input.conf
 source = ~/.config/hypr/bindings.conf
 source = ~/.config/hypr/envs.conf
