--- a/hypr/.config/hypr/looknfeel.conf
+++ b/hypr/.config/hypr/looknfeel.conf
@@ -2,9 +2,9 @@
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    # No gaps between windows or borders
-    # gaps_in = 0
-    # gaps_out = 0
+    # Reduced gaps for tighter window layout
+    gaps_in = 3
+    gaps_out = 6
     # border_size = 0
 
     # Use master layout instead of dwindle
@@ -14,7 +14,21 @@ general {
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
     # Use round window corners
-    # rounding = 8
+    rounding = 10
+
+    # Window opacity (1.0 = opaque, 0.0 = transparent)
+    active_opacity = 0.92
+    inactive_opacity = 0.85
+
+    # Blur settings
+    blur {
+        enabled = true
+        size = 8
+        passes = 2
+        new_optimizations = true
+        xray = false
+        ignore_opacity = false
+    }
 }
 
 # https://wiki.hypr.land/Configuring/Dwindle-Layout/
@@ -22,3 +36,18 @@ dwindle {
     # Avoid overly wide single-window layouts on wide screens
     # single_window_aspect_ratio = 1 1
 }
+
+# Layer rules for blur and rounding
+layerrule = blur, waybar
+layerrule = ignorezero, waybar
+layerrule = blur, notifications
+layerrule = blur, gtk-layer-shell
+layerrule = blur, rofi
+layerrule = blur, walker
+layerrule = blur, swayosd
+
+# Window rules for consistent rounding on all windows
+windowrulev2 = rounding 10, class:.*
+windowrulev2 = rounding 10, title:.*
+windowrulev2 = rounding 10, floating:1
+windowrulev2 = rounding 10, pinned:1
