--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -3,15 +3,17 @@
   "layer": "top",
   "position": "top",
   "spacing": 0,
-  "height": 26,
-  "modules-left": ["custom/omarchy", "hyprland/workspaces"],
-  "modules-center": ["clock", "custom/update", "custom/screenrecording-indicator"],
+  "height": 38,
+  "margin-top": 6,
+  "margin-left": 6,
+  "margin-right": 6,
+  "modules-left": ["custom/omarchy", "hyprland/workspaces", "cpu", "memory", "custom/gpu"],
+  "modules-center": ["custom/cava", "custom/update", "custom/screenrecording-indicator"],
   "modules-right": [
     "group/tray-expander",
+    "clock",
     "bluetooth",
     "network",
-    "pulseaudio",
-    "cpu",
     "battery"
   ],
   "hyprland/workspaces": {
@@ -33,9 +35,7 @@
     "persistent-workspaces": {
       "1": [],
       "2": [],
-      "3": [],
-      "4": [],
-      "5": []
+      "3": []
     }
   },
   "custom/omarchy": {
@@ -55,8 +55,32 @@
 
   "cpu": {
     "interval": 5,
-    "format": "󰍛",
-    "on-click": "xdg-terminal-exec btop"
+    "format": "󰍛 {usage}%",
+    "tooltip-format": "CPU: {usage}%",
+    "on-click": "xdg-terminal-exec btop",
+    "states": {
+      "warning": 70,
+      "critical": 90
+    }
+  },
+  "memory": {
+    "interval": 5,
+    "format": "󰘚 {percentage}%",
+    "tooltip-format": "RAM: {used:0.1f}G / {total:0.1f}G ({percentage}%)",
+    "on-click": "xdg-terminal-exec btop",
+    "states": {
+      "warning": 70,
+      "critical": 90
+    }
+  },
+  "custom/gpu": {
+    "interval": 5,
+    "format": "󰢮 {}",
+    "exec": "~/.config/waybar/scripts/gpu-usage.sh",
+    "tooltip": true,
+    "exec-tooltip": "~/.config/waybar/scripts/gpu-tooltip.sh",
+    "on-click": "xdg-terminal-exec btop",
+    "return-type": ""
   },
   "clock": {
     "format": "{:L%A %H:%M}",
@@ -132,8 +156,22 @@
     "signal": 8,
     "return-type": "json"
   },
+  "custom/cava": {
+    "exec": "~/.config/waybar/scripts/cava-waybar.sh",
+    "return-type": "json",
+    "format": "{}",
+    "on-click": "xdg-terminal-exec --app-id=com.omarchy.Wiremix -e wiremix",
+    "on-click-right": "swayosd-client --output-volume mute-toggle",
+    "on-scroll-up": "swayosd-client --output-volume raise",
+    "on-scroll-down": "swayosd-client --output-volume lower",
+    "exec-on-event": true,
+    "signal": 9,
+    "tooltip": true,
+    "exec-tooltip": "pamixer --get-volume | awk '{print \"Volume: \"$1\"%\"}'",
+    "restart-interval": 1
+  },
   "tray": {
-    "icon-size": 12,
-    "spacing": 17
+    "icon-size": 22,
+    "spacing": 27
   }
 }
