--- a/walker/.config/walker/config.toml
+++ b/walker/.config/walker/config.toml
@@ -1,7 +1,7 @@
 force_keyboard_focus = true                                                 # forces keyboard forcus to stay in Walker
 selection_wrap = true                                                       # wrap list if at bottom or top
-theme = "omarchy-default"                                                   # theme to use
-additional_theme_location = "~/.local/share/omarchy/default/walker/themes/"
+theme = "custom-rounded"                                                    # custom theme with rounded corners
+additional_theme_location = "~/.config/walker/themes/"                    # use our custom theme from dotfiles
 
 [placeholders]
 "default" = { input = " Search...", list = "No Results" } # placeholders for input and empty list, key is the providers name, so f.e. "desktopapplications" or "menus:other"
