Fix duplicate waybar on boot
Omarchy already starts waybar via uwsm-app in its default autostart.
Removed our duplicate exec-once to prevent two waybars.

--- a/hypr/.config/hypr/autostart.conf
+++ b/hypr/.config/hypr/autostart.conf
@@ -1,5 +1,6 @@
 # Extra autostart processes
 # exec-once = uwsm-app -- my-service
 
-# Start waybar
-exec-once = waybar
+# NOTE: Omarchy starts waybar automatically via uwsm-app
+# No need to start waybar here, it would create duplicates
+# exec-once = waybar
