Fix Walker and notification styling after reboot
- Changed Walker to use omarchy-default theme directly
- Added layerrule for rounding (may not be supported, but doesn't cause errors)
- Removed broken custom-rounded theme approach
- Walker now properly inherits Omarchy styling with Tokyo Night colors

--- a/hypr/.config/hypr/looknfeel.conf
+++ b/hypr/.config/hypr/looknfeel.conf
@@ -46,6 +46,10 @@ layerrule = blur, rofi
 layerrule = blur, walker
 layerrule = blur, swayosd
 
+# Attempt to add rounding to layer-shell windows (if supported)
+layerrule = rounding 10, walker
+layerrule = rounding 10, notifications
+
 # Window rules for consistent rounding on all windows
 windowrulev2 = rounding 10, class:.*
 windowrulev2 = rounding 10, title:.*
