Fix Walker theme loading and remove invalid layerrules
- Added correct additional_theme_location for omarchy-default theme
- Removed invalid 'layerrule = rounding' (not supported by Hyprland)
- Walker now properly finds and loads Omarchy theme
- All changes are in dotfiles repo only, no Omarchy files touched

--- a/hypr/.config/hypr/looknfeel.conf
+++ b/hypr/.config/hypr/looknfeel.conf
@@ -37,7 +37,7 @@ dwindle {
     # single_window_aspect_ratio = 1 1
 }
 
-# Layer rules for blur and rounding
+# Layer rules for blur
 layerrule = blur, waybar
 layerrule = ignorezero, waybar
 layerrule = blur, notifications
@@ -45,10 +45,6 @@ layerrule = blur, gtk-layer-shell
 layerrule = blur, rofi
 layerrule = blur, walker
 layerrule = blur, swayosd
-
-# Attempt to add rounding to layer-shell windows (if supported)
-layerrule = rounding 10, walker
-layerrule = rounding 10, notifications
 
 # Window rules for consistent rounding on all windows
 windowrulev2 = rounding 10, class:.*
