Update Hyprland rounding to 12px to match Walker
For visual consistency across the entire system:
- Hyprland windows: 12px rounded corners
- Walker menus: 12px border-radius
- All elements now have matching corner radius

--- a/hypr/.config/hypr/looknfeel.conf
+++ b/hypr/.config/hypr/looknfeel.conf
@@ -13,8 +13,8 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    # Use round window corners
-    rounding = 10
+    # Use round window corners (matches Walker's 12px border-radius)
+    rounding = 12
 
     # Window opacity (1.0 = opaque, 0.0 = transparent)
     active_opacity = 0.92
@@ -47,7 +47,7 @@ layerrule = blur, walker
 layerrule = blur, swayosd
 
 # Window rules for consistent rounding on all windows
-windowrulev2 = rounding 10, class:.*
-windowrulev2 = rounding 10, title:.*
-windowrulev2 = rounding 10, floating:1
-windowrulev2 = rounding 10, pinned:1
+windowrulev2 = rounding 12, class:.*
+windowrulev2 = rounding 12, title:.*
+windowrulev2 = rounding 12, floating:1
+windowrulev2 = rounding 12, pinned:1
