Reset Walker to proper Omarchy theme configuration
- Updated config.toml: removed additional_theme_location, added theme_base, theme_location, hotreload_theme
- Created omarchy-default.css shared override with rounded corners and width constraint
- Imports Omarchy default CSS and current theme CSS using file:// URLs
- #box: border-radius 12px, max-width 850px, centered with auto margins

Note: dmenu_150, dmenu_250, and keybindings.css files don't exist in
this Omarchy installation (only omarchy-default theme directory exists)

--- a/walker/.config/walker/config.toml
+++ b/walker/.config/walker/config.toml
@@ -1,7 +1,9 @@
 force_keyboard_focus = true                                                 # forces keyboard forcus to stay in Walker
 selection_wrap = true                                                       # wrap list if at bottom or top
 theme = "omarchy-default"                                                   # use Omarchy's default theme
-additional_theme_location = "./themes/"                                     # load user overrides from ~/.config/walker/themes/
+theme_base = []
+theme_location = ["~/.local/share/omarchy/default/walker/themes/"]
+hotreload_theme = true
 
 [placeholders]
 "default" = { input = " Search...", list = "No Results" } # placeholders for input and empty list, key is the providers name, so f.e. "desktopapplications" or "menus:other"
