--- a/walker/.config/walker/config.toml
+++ b/walker/.config/walker/config.toml
@@ -1,9 +1,7 @@
 force_keyboard_focus = true                                                 # forces keyboard forcus to stay in Walker
 selection_wrap = true                                                       # wrap list if at bottom or top
-theme = "omarchy-sushi"
-theme_base = []
-hotreload_theme = true
-hide_quick_activation = true
+theme = "omarchy-default"                                                   # theme to use
+additional_theme_location = "./themes/"
 
 [placeholders]
 "default" = { input = " Search...", list = "No Results" } # placeholders for input and empty list, key is the providers name, so f.e. "desktopapplications" or "menus:other"
