Add hide_quick_activation to Walker config
- Set hide_quick_activation = true to hide keybind hints bar
- This is the proper config-based way to remove tooltips
- No longer needs CSS workarounds for hiding hints

--- a/walker/.config/walker/config.toml
+++ b/walker/.config/walker/config.toml
@@ -2,6 +2,7 @@ force_keyboard_focus = true                                                 # fo
 selection_wrap = true                                                       # wrap list if at bottom or top
 theme = "omarchy-default"                                                   # theme to use
 additional_theme_location = "./themes/"
+hide_quick_activation = true                                                # hide the keybind hints bar
 
 [placeholders]
 "default" = { input = " Search...", list = "No Results" } # placeholders for input and empty list, key is the providers name, so f.e. "desktopapplications" or "menus:other"
