--- a/walker/.config/walker/config.toml
+++ b/walker/.config/walker/config.toml
@@ -10,6 +10,9 @@ hide_quick_activation = true                                                # hi
 [keybinds]
 quick_activate = []
 
+[ui]
+hide_quick_activation = true
+
 [providers]
 default = [
   "desktopapplications",
