--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -39,7 +39,7 @@
     }
   },
   "custom/omarchy": {
-    "format": "",
+    "format": "<span font='CaskaydiaMono Nerd Font'></span>",
     "on-click": "omarchy-menu",
     "on-click-right": "xdg-terminal-exec",
     "tooltip-format": "Omarchy Menu\n\nSuper + Alt + Space"
