Use Unicode emoji sushi instead of Nerd Font icon
- Changed from nf-fae-sushi (wasn't rendering) to Unicode emoji 🍣
- The Nerd Font sushi icon doesn't exist or isn't at that codepoint
- Unicode emoji renders reliably across all systems

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -39,7 +39,7 @@
     }
   },
   "custom/omarchy": {
-    "format": "<span font='CaskaydiaMono Nerd Font'></span>",
+    "format": "🍣",
     "on-click": "omarchy-menu",
     "on-click-right": "xdg-terminal-exec",
     "tooltip-format": "Omarchy Menu\n\nSuper + Alt + Space"
