--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -11,6 +11,26 @@ animations {
     enabled = false
 }
 
+# Custom OMARCHYSUS ASCII Art Banner
+label {
+    monitor =
+    text = cmd[update:0] echo " ▄██████▄    ▄▄▄▄███▄▄▄▄      ▄████████    ▄████████  ▄████████    ▄█    █▄    ███    █▄     ▄████████ 
+███    ███ ▄██▀▀▀███▀▀▀██▄   ███    ███   ███    ███ ███    ███   ███    ███   ███    ███   ███    ███ 
+███    ███ ███   ███   ███   ███    ███   ███    ███ ███    █▀    ███    ███   ███    ███   ███    █▀  
+███    ███ ███   ███   ███   ███    ███  ▄███▄▄▄▄██▀ ███         ▄███▄▄▄▄███▄▄ ███    ███   ███        
+███    ███ ███   ███   ███ ▀███████████ ▀▀███▀▀▀▀▀   ███        ▀▀███▀▀▀▀███▀  ███    ███ ▀███████████ 
+███    ███ ███   ███   ███   ███    ███ ▀███████████ ███    █▄    ███    ███   ███    ███          ███ 
+███    ███ ███   ███   ███   ███    ███   ███    ███ ███    ███   ███    ███   ███    ███    ▄█    ███ 
+ ▀██████▀   ▀█   ███   █▀    ███    █▀    ███    ███ ████████▀    ███    █▀    ████████▀   ▄████████▀  
+                                          ███    ███"
+    color = rgba(200, 200, 200, 1.0)
+    font_size = 12
+    font_family = CaskaydiaMono Nerd Font Mono
+    position = 0, 250
+    halign = center
+    valign = center
+}
+
 input-field {
     monitor =
     size = 650, 100
