--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -28,8 +28,8 @@ bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/"
 bindd = SUPER SHIFT ALT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
 
 # Screenshot bindings
-bindd = SUPER, S, Screenshot to clipboard, exec, grim -g "$(slurp)" - | wl-copy
-bindd = SUPER SHIFT, S, Screenshot to edit, exec, grim -g "$(slurp)" - | satty --filename - --fullscreen --output-filename ~/Pictures/Screenshots/satty-$(date '+%Y%m%d-%H:%M:%S').png
+bindd = , PRINT, Screenshot to clipboard, exec, grim -g "$(slurp)" - | wl-copy
+bindd = SHIFT, PRINT, Screenshot to edit, exec, grim -g "$(slurp)" - | satty --filename - --fullscreen --output-filename ~/Pictures/Screenshots/satty-$(date '+%Y%m%d-%H:%M:%S').png
 
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER, SPACE
