--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -27,9 +27,10 @@ bindd = SUPER SHIFT, P, Google Photos, exec, omarchy-launch-or-focus-webapp "Goo
 bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/"
 bindd = SUPER SHIFT ALT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
 
-# Screenshot bindings
-bindd = , PRINT, Screenshot to clipboard, exec, grim -g "$(slurp)" - | wl-copy
-bindd = SHIFT, PRINT, Screenshot to edit, exec, grim -g "$(slurp)" - | satty --filename - --fullscreen --output-filename ~/Pictures/Screenshots/satty-$(date '+%Y%m%d-%H:%M:%S').png
+# Screenshot bindings - override scratchpad toggle
+unbind = SUPER, S
+bindd = SUPER, S, Screenshot to clipboard, exec, grim -g "$(slurp)" - | wl-copy
+bindd = SUPER SHIFT, S, Screenshot to edit, exec, grim -g "$(slurp)" - | satty --filename - --fullscreen --output-filename ~/Pictures/Screenshots/satty-$(date '+%Y%m%d-%H:%M:%S').png
 
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER, SPACE
