Add Posy's Improved Cursor (Black version)
- Set XCURSOR_THEME and HYPRCURSOR_THEME in Hyprland envs
- Configure GTK3 and GTK4 cursor settings
- Add install-posy-cursor script for easy installation on other machines
- Cursor installed to ~/.local/share/icons (no sudo required)

--- a/hypr/.config/hypr/envs.conf
+++ b/hypr/.config/hypr/envs.conf
@@ -1,2 +1,6 @@
 # Extra env variables
 # env = MY_GLOBAL_ENV,setting
+
+# Posy's Cursor Theme
+env = XCURSOR_THEME,Posy_Cursor_Black
+env = HYPRCURSOR_THEME,Posy_Cursor_Black
