Configure truly raw mouse input with zero acceleration
- Set force_no_accel = 1 to completely disable acceleration
- Set accel_profile = flat for libinput flat profile (no curve)
- Set sensitivity = 0 for unmodified 1:1 mouse movement
- Ensures completely raw input with no buffering, smoothing, or processing
- Perfect for gaming and precise cursor control
- Auto-applies on all systems that sync from GitHub

--- a/hypr/.config/hypr/input.conf
+++ b/hypr/.config/hypr/input.conf
@@ -13,8 +13,17 @@ input {
   # Start with numlock on by default
   numlock_by_default = true
 
-  # Increase sensitivity for mouse/trackpad (default: 0)
-  # sensitivity = 0.35
+  # Mouse sensitivity (0 = no modification, -1.0 to 1.0 range)
+  # Keep at 0 for completely raw 1:1 mouse input
+  sensitivity = 0
+
+  # RAW MOUSE INPUT - No acceleration, smoothing, or processing
+  # force_no_accel completely disables any mouse acceleration
+  force_no_accel = 1
+  
+  # accel_profile = flat ensures libinput uses a flat profile (no curve)
+  # Options: "flat" (1:1 raw input) or "adaptive" (acceleration curve)
+  accel_profile = flat
 
   touchpad {
     # Use natural (inverse) scrolling
