Fix Steam tiling, XWayland scaling, and increase cursor speed
Window Rules (looknfeel.conf):
- Force Steam to tile instead of floating
- Apply to both 'steam' and 'steamwebhelper' classes

XWayland Scaling Fix (envs.conf):
- Set GDK_SCALE=1 to fix GTK app scaling
- Set QT_AUTO_SCREEN_SCALE_FACTOR=1 to fix Qt app scaling
- Resolves Steam appearing 2x larger than other apps
- Fixes scaling for all XWayland applications

Mouse Input (input.conf):
- Increase sensitivity to 0.7 for Windows-like cursor speed
- Still completely raw input (no acceleration/smoothing)

Note: Requires Hyprland restart for env vars to take effect

--- a/hypr/.config/hypr/envs.conf
+++ b/hypr/.config/hypr/envs.conf
@@ -4,3 +4,8 @@
 # Posy's Cursor Theme
 env = XCURSOR_THEME,Posy_Cursor_Black
 env = HYPRCURSOR_THEME,Posy_Cursor_Black
+
+# Fix XWayland scaling issues (Steam, etc.)
+# Force XWayland apps to use monitor scale 1:1
+env = GDK_SCALE,1
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
