--- a/hypr/.config/hypr/input.conf
+++ b/hypr/.config/hypr/input.conf
@@ -14,8 +14,8 @@ input {
   numlock_by_default = true
 
   # Mouse sensitivity (0 = no modification, -1.0 to 1.0 range)
-  # Keep at 0 for completely raw 1:1 mouse input
-  sensitivity = 0
+  # Increase speed closer to Windows cursor speed (still raw input, just faster)
+  sensitivity = 0.7
 
   # RAW MOUSE INPUT - No acceleration, smoothing, or processing
   # force_no_accel completely disables any mouse acceleration
