--- a/hypr/.config/hypr/looknfeel.conf
+++ b/hypr/.config/hypr/looknfeel.conf
@@ -51,3 +51,9 @@ windowrulev2 = rounding 12, class:.*
 windowrulev2 = rounding 12, title:.*
 windowrulev2 = rounding 12, floating:1
 windowrulev2 = rounding 12, pinned:1
+
+# Steam window rules - Fix tiling and scaling
+windowrulev2 = tile, class:^(steam)$
+windowrulev2 = tile, class:^(steamwebhelper)$
+# Fix XWayland 2x scaling issue by forcing XWayland scale to 1
+windowrulev2 = rounding 12, class:^(steam)$
