--- a/hypr/.config/hypr/input.conf
+++ b/hypr/.config/hypr/input.conf
@@ -14,16 +14,17 @@ input {
   numlock_by_default = true
 
   # Mouse sensitivity (0 = no modification, -1.0 to 1.0 range)
-  # Increase speed closer to Windows cursor speed (still raw input, just faster)
+  # Increase speed to match Windows cursor speed (still raw input, just faster)
   sensitivity = 0.7
 
-  # RAW MOUSE INPUT - No acceleration, smoothing, or processing
-  # force_no_accel completely disables any mouse acceleration
-  force_no_accel = 1
-  
-  # accel_profile = flat ensures libinput uses a flat profile (no curve)
-  # Options: "flat" (1:1 raw input) or "adaptive" (acceleration curve)
+  # RAW MOUSE INPUT - True 1:1 movement with NO acceleration
+  # accel_profile = flat provides constant 1:1 pointer movement (no velocity curves)
+  # This gives raw input while allowing sensitivity adjustment (unlike force_no_accel)
+  # Options: "flat" (1:1 raw) or "adaptive" (acceleration curve)
   accel_profile = flat
+  
+  # NOTE: force_no_accel is NOT used because it blocks sensitivity adjustment
+  # flat profile already provides true raw input without acceleration
 
   touchpad {
     # Use natural (inverse) scrolling
