Add EasyEffects autostart and set mouse sensitivity to Windows default
EasyEffects Configuration:
- Added exec-once with uwsm-app (follows Omarchy pattern)
- Uses --gapplication-service to run in background
- Will autostart on every login and persist through restarts
- Effects apply automatically when service starts

Mouse Sensitivity:
- Changed from 0.7 to 0.0 (Windows default speed)
- With accel_profile=flat, this provides true 1:1 raw input
- No modification to base pointer speed

--- a/hypr/.config/hypr/autostart.conf
+++ b/hypr/.config/hypr/autostart.conf
@@ -4,3 +4,7 @@
 # NOTE: Omarchy starts waybar automatically via uwsm-app
 # No need to start waybar here, it would create duplicates
 # exec-once = waybar
+
+# EasyEffects - Audio effects processor
+# Runs in service mode (background) and persists through restarts
+exec-once = uwsm-app -- easyeffects --gapplication-service
