--- a/hypr/.config/hypr/input.conf
+++ b/hypr/.config/hypr/input.conf
@@ -14,8 +14,8 @@ input {
   numlock_by_default = true
 
   # Mouse sensitivity (0 = no modification, -1.0 to 1.0 range)
-  # Increase speed to match Windows cursor speed (still raw input, just faster)
-  sensitivity = 0.7
+  # Keep at 0 for Windows default cursor speed (with flat profile = raw input)
+  sensitivity = 0
 
   # RAW MOUSE INPUT - True 1:1 movement with NO acceleration
   # accel_profile = flat provides constant 1:1 pointer movement (no velocity curves)
