--- a/mako/.config/mako/config
+++ b/mako/.config/mako/config
@@ -1,11 +1,12 @@
-# Import Omarchy theme settings
+# Import Omarchy default settings
 include=~/.local/share/omarchy/default/mako/core.ini
 
-# Override with rounded corners (stored in dotfiles repo)
-border-radius=10
+# Import current theme colors (auto-updates when theme changes)
+include=~/.config/omarchy/current/theme/mako.ini
 
-# Keep theme colors from Omarchy
-text-color=#c0caf5
-border-color=#33ccff
-background-color=#1a1b26
+# Override with rounded corners to match Hyprland (12px)
+border-radius=12
+
+# Proper opacity (no weird transparency box)
+background-color=#2c2525ee
 
