Improve notification theming (Mako) - matches Omarchy theme
Mako Configuration:
- Now imports theme colors from Omarchy automatically
- Auto-updates when Omarchy theme changes
- Border-radius = 12px (matches system)
- Fully opaque background (#2c2525ff)
- Zero margins for cleaner appearance
- 2px border for definition

Hyprland Configuration:
- Disabled blur for notifications layer
- Prevents most transparency artifacts
- Minor corner artifacts remain (Mako limitation)

Result: Notifications properly match Omarchy theme with minimal artifacts

--- a/hypr/.config/hypr/looknfeel.conf
+++ b/hypr/.config/hypr/looknfeel.conf
@@ -40,7 +40,9 @@ dwindle {
 # Layer rules for blur
 layerrule = blur, waybar
 layerrule = ignorezero, waybar
-layerrule = blur, notifications
+# Blur disabled for notifications - prevents corner artifacts
+# (Notifications use opaque background instead)
+# layerrule = blur, notifications
 layerrule = blur, gtk-layer-shell
 layerrule = blur, rofi
 layerrule = blur, walker
