Add XDG_DATA_DIRS to Hyprland envs.conf for Flatpak support
- Ensures Flatpak apps show up in Walker after hyprctl reload
- Complements the uwsm/env setting for session-wide support
- Allows Hyprland to immediately pick up Flatpak desktop files

--- a/hypr/.config/hypr/envs.conf
+++ b/hypr/.config/hypr/envs.conf
@@ -9,3 +9,6 @@ env = HYPRCURSOR_THEME,Posy_Cursor_Black
 # Force XWayland apps to use monitor scale 1:1
 env = GDK_SCALE,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+
+# Add Flatpak application directories so Walker/launchers can find them
+env = XDG_DATA_DIRS,/var/lib/flatpak/exports/share:$HOME/.local/share/flatpak/exports/share:/usr/local/share:/usr/share
