--- a/hypr/.config/hypr/envs.conf
+++ b/hypr/.config/hypr/envs.conf
@@ -11,4 +11,4 @@ env = GDK_SCALE,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 
 # Add Flatpak application directories so Walker/launchers can find them
-env = XDG_DATA_DIRS,/var/lib/flatpak/exports/share:$HOME/.local/share/flatpak/exports/share:/usr/local/share:/usr/share
+env = XDG_DATA_DIRS,/var/lib/flatpak/exports/share:/home/sushii/.local/share/flatpak/exports/share:/usr/local/share:/usr/share
